# sdl_text_to_img

./: .clang-format  CMakeLists.txt  README.md
src/: c_sdlhelper.h  main.cpp
